@@ -1,3 +1,6 @@
+When uploading pictures, binary picture data is now sent along in the parameter string
+Delete parameters are now stored in a file so the can be loaded later on when not executed before closing JCpg
+Fixed nullpointer when trying to go into albumview when an album does not have pictures
 Fixed bug where the albul id wasn't correctly passed to its pictures when adding these pictures
 Found bug where only one album in a category is shown in albumview when the category actually has more albums
 Further extented the album view: the albums are now clickable and activate that particular album
